--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="/dist/style.css" />
+    <link rel="stylesheet" href="dist/style.css" />
     <title>Responsive Admin Dashboard</title>
   </head>
   <body>
