Responsive Admin Dashboard

--- a/index.html
+++ b/index.html
@@ -92,46 +92,202 @@
 
     <!-- Main Section -->
     <main class="main" id="main">
-      <div class="container">
-        <div class="cards">
-          <div class="card">
-            <div class="text">
-              <p class="count">1000</p>
-              <small>Views</small>
+      <!-- Overview Section -->
+      <section class="cards-section">
+        <div class="container">
+          <div class="cards">
+            <div class="card">
+              <div class="text">
+                <p class="count">1000</p>
+                <small>Views</small>
+              </div>
+              <div class="icon">
+                <ion-icon name="eye-outline"></ion-icon>
+              </div>
             </div>
-            <div class="icon">
-              <ion-icon name="eye-outline"></ion-icon>
+            <div class="card">
+              <div class="text">
+                <p class="count">100</p>
+                <small>Sales</small>
+              </div>
+              <div class="icon">
+                <ion-icon name="cart-outline"></ion-icon>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <p class="count">100</p>
-              <small>Sales</small>
+            <div class="card">
+              <div class="text">
+                <p class="count">203</p>
+                <small>Comments</small>
+              </div>
+              <div class="icon">
+                <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+              </div>
             </div>
-            <div class="icon">
-              <ion-icon name="cart-outline"></ion-icon>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <p class="count">203</p>
-              <small>Comments</small>
-            </div>
-            <div class="icon">
-              <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <p class="count">$6023</p>
-              <small>Earnings</small>
-            </div>
-            <div class="icon">
-              <ion-icon name="cash-outline"></ion-icon>
+            <div class="card">
+              <div class="text">
+                <p class="count">$6023</p>
+                <small>Earnings</small>
+              </div>
+              <div class="icon">
+                <ion-icon name="cash-outline"></ion-icon>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- Overview Section Ends -->
+
+      <!-- Data Section -->
+      <section class="data">
+        <div class="container">
+          <div class="data-wrapper">
+            <div class="recent-orders">
+              <div class="orders-header">
+                <h2>Recent Orders</h2>
+                <div class="orders-cta">
+                  <a href="#" class="btn"> View All </a>
+                </div>
+              </div>
+              <table class="data-table">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Payments</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>Star Fridger</td>
+                    <td>$1300</td>
+                    <td>Paid</td>
+                    <td><span class="status delivered">Delivered</span></td>
+                  </tr>
+                  <tr>
+                    <td>Window Cleaner</td>
+                    <td>$130</td>
+                    <td>Due</td>
+                    <td><span class="status pending">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>Led Tv</td>
+                    <td>$1200</td>
+                    <td>Paid</td>
+                    <td><span class="status return">Return</span></td>
+                  </tr>
+                  <tr>
+                    <td>Desktop</td>
+                    <td>$2000</td>
+                    <td>Due</td>
+                    <td><span class="status progress">In Progress</span></td>
+                  </tr>
+                  <tr>
+                    <td>Xioami Mobile</td>
+                    <td>$300</td>
+                    <td>Paid</td>
+                    <td><span class="status delivered">Delivered</span></td>
+                  </tr>
+                  <tr>
+                    <td>Apple Iphone</td>
+                    <td>$700</td>
+                    <td>Paid</td>
+                    <td><span class="status pending">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>M.2 SSD</td>
+                    <td>$100</td>
+                    <td>Paid</td>
+                    <td><span class="status return">Return</span></td>
+                  </tr>
+                  <tr>
+                    <td>Smart Watch</td>
+                    <td>$80</td>
+                    <td>Due</td>
+                    <td><span class="status pending">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>Speaker</td>
+                    <td>$150</td>
+                    <td>Paid</td>
+                    <td><span class="status delivered">Delivered</span></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <ul class="recent-customers">
+              <div class="customers-header">
+                <h3>Recent Comments</h3>
+              </div>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+              <li class="customer">
+                <div class="img">
+                  <img src="./src/img/0.jpg" alt="Customer" />
+                </div>
+                <div class="text">
+                  <p>Arshad</p>
+                  <small>Italy</small>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- Data Section Ends -->
     </main>
     <!-- Main Section -->
 
